# gp_emulator

./: CMakeLists.txt  MANIFEST.in  README.md  README.rst  deviceQuery  setup.py
data/: prosail_30_0_30_0.npz
doc/: build.sh  report.latex  report.md
gp_emulator/: GaussianProcess.py  __init__.py  multivariate_gp.py
gp_emulator/gpu/: CMakeLists.txt  LookUp-GreatCMakeCookOff.cmake  Makefile  _gpu_predict.c  _gpu_predict.cpp  _gpu_predict.cu  cdist.cu  computeTranspose.c  computeTranspose.cu  gpu_predict.h  kernel_cdist.cu  kernel_crossMinus.cu  kernel_elementwiseMult.cu  kernel_init_array.cu  kernel_matrixExp.cu  kernel_rowSum.cu  kernel_scalarMinusVec.cu  kernel_vectorTimesMatrix.cu  predict.cu  predictcpp.cu  pure_c.cpp  test.py
gp_emulator/gpu/tests/: .test1..swp  .test1.cu.swp  CMakeLists.txt  Makefile  benchmark_predict.c  compare_result.cu  gpu_predict_test.h  readTestData.c  readTestData.cu  test1.c  test1.cu  testCdist.cu  testCublasgemm.cu  testGetPredictDataFromPython.cu  testInitArray.cu  testMatrixExp.cu  testPredict.cu  testVecTimesMat.cu  test_py2c.c  unit_test.cu  unit_tests.py
tests/: benchmark.py  benchmark2.py  test_emulator.py  test_perband_emulator.py  unit_tests.py  unit_tests2.py
